fixed mis-alignment in DefaultSizePost component

--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -4,4 +4,5 @@
   justify-content: center;
   padding: 20px;
   border-style: dashed;
+  background-color: black;
 }
