--- a/src/components/Homepage/LeftComponent/Post/DefaultSizePost/DefaultSizePost.css
+++ b/src/components/Homepage/LeftComponent/Post/DefaultSizePost/DefaultSizePost.css
@@ -1,6 +1,7 @@
 #mainComponent {
   position: relative;
   left: 40px;
+  width: 600px;
 }
 
 #DefaultSizePostTopBar {
@@ -50,4 +51,8 @@
 #picture {
   width: 100%;
   height: 100%;
+}
+
+#contentBox {
+  width: 600px;
 }
